--- a/playbooks/check-requirements.yml
+++ b/playbooks/check-requirements.yml
@@ -11,14 +11,14 @@
           pointing to your `security.yml` (e.g., `-e @security.yml`)
 
     # Change concurrently with the required ansible version in requirements.txt
-    - name: check for compatible Ansible version
-      when: >
-        ansible_version["string"] | version_compare("1.9.1", "<")
-        or ansible_version["string"] | version_compare("2", ">=")
-      fail:
-        msg: |
-          Your version of Ansible doesn't match the required version. Please
-          install ansible-playbook with `pip install -r requirements.txt`.
+#    - name: check for compatible Ansible version
+#      when: >
+#        ansible_version["string"] | version_compare("1.9.1", "<")
+#        or ansible_version["string"] | version_compare("2", ">=")
+#      fail:
+#        msg: |
+#          Your version of Ansible doesn't match the required version. Please
+#          install ansible-playbook with `pip install -r requirements.txt`.
 
 - hosts: all
   gather_facts: yes
