--- a/roles/vault/tasks/tls-auth.yml
+++ b/roles/vault/tasks/tls-auth.yml
@@ -4,6 +4,7 @@
   run_once: yes
   command: vault auth {{ vault_command_options }} {{ vault_token }}
   changed_when: false
+  when: vault_token is defined
   tags:
     - vault
 
@@ -13,6 +14,7 @@
   command: vault auth-enable {{ vault_command_options }} cert
   register: vault_enable_cert
   ignore_errors: yes
+  when: vault_token is defined
   failed_when: >
     {{ vault_enable_cert.rc != 0
     and 'path is already in use' not in vault_enable_cert.stderr }}
@@ -27,6 +29,7 @@
     auth/cert/certs/mantl-ca
     display_name=mantl-ca
     certificate=@/etc/pki/CA/ca.cert
+  when: vault_token is defined
   tags:
     - vault
 
@@ -34,5 +37,6 @@
   sudo: yes
   command: vault auth {{ vault_command_options }} --method=cert
   changed_when: false
+  when: vault_token is defined
   tags:
     - vault
