--- a/roles/certificates/defaults/main.yml
+++ b/roles/certificates/defaults/main.yml
@@ -14,17 +14,15 @@ location: "{{ inventory_hostname }}" # Openssl's "CN" ("Common Name"). Can't be 
 dns:
   - "{{ inventory_hostname }}"
   - "{{ inventory_hostname }}.node.consul"
-  - "{{ ansible_hostname }}"
-  - "{{ ansible_hostname }}.node.consul"
+  - "{{ inventory_hostname }}.node"
+  - "{{ inventory_hostname }}.node.consul"
+  - "*.service"
   - "*.service.consul"
 # What IP addresses will this certificate be valid for?
 ip:
-  - "{{ ansible_all_ipv4_addresses | join(' ') }}"
-  - "{{ ansible_all_ipv6_addresses | join(' ') }}"
-  # This is the first address in the kube_service_addresses range, aka the
-  # k8s_service_ip. It is used internally by the dashboard and other services.
-  - "{{ kube_service_addresses|ipaddr('net')|ipaddr(1)|ipaddr('address') }}"
-
+  - "{{ public_ipv4 }}"
+  - "{{ private_ipv4 }}"
+  - "{{ ansible_ssh_host }}"
 # Don't change these defaults; many components depend on the expected locations.
 prefix: ""
 destination: /etc/pki/mantl
