--- a/playbooks/c12e_customize.yml
+++ b/playbooks/c12e_customize.yml
@@ -5,6 +5,7 @@
   vars: 
     mantl_config_dir: ~/projects/mantl-config
     wildcard_certs_dir: "{{mantl_config_dir}}/c1.io.certs"
+    # a directory where you keep configuration of mantl projects
     use_wildcard_certs: "yes"
   tasks:
     - debug: msg="{{mantl_config_dir}}"
