--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,9 @@ ssl/kubernetes
 **/*.tfstate*
 **/.terraform
 
+**/*.tfvars.json
+**/*.tfvars
+
 # downloaded by playbook
 addons/library/
 library/lvg.py
