--- a/roles/consul/tasks/main.yml
+++ b/roles/consul/tasks/main.yml
@@ -12,8 +12,11 @@
     - consul
     - bootstrap
    
+# - set_fact:
+#    private_ipv4: "{{ hostvars[inventory_hostname]['ec2_private_ip_address'] }}"
+#    when: provider == 'aws'
 - set_fact:
-   private_ipv4: "{{ hostvars[inventory_hostname]['ec2_private_ip_address'] }}"
+   private_ipv4: "{{ hostvars[inventory_hostname]['ansible_ec2_local_ipv4'] }}"
    when: provider == 'aws'
 
 - name: add consul user to tls group
