--- a/roles/consul/tasks/main.yml
+++ b/roles/consul/tasks/main.yml
@@ -12,9 +12,6 @@
     - consul
     - bootstrap
    
-# - set_fact:
-#    private_ipv4: "{{ hostvars[inventory_hostname]['ec2_private_ip_address'] }}"
-#    when: provider == 'aws'
 - set_fact:
    private_ipv4: "{{ hostvars[inventory_hostname]['ansible_ec2_local_ipv4'] }}"
    when: provider == 'aws'
@@ -25,6 +22,10 @@
     append: yes
     name: consul
     groups: tls
+
+- set_fact:
+   private_ipv4: "{{ hostvars[inventory_hostname]['ec2_private_ip_address'] }}"
+   when: provider == 'aws'
 
 - name: configure consul
   sudo: yes
