--- a/roles/consul/tasks/main.yml
+++ b/roles/consul/tasks/main.yml
@@ -11,10 +11,19 @@
   tags:
     - consul
     - bootstrap
-   
+
+- name: gather ec2_facts for mesos
+  ec2_facts:
+  tags:
+    - consul
+    - security_rotation
+
 - set_fact:
-   private_ipv4: "{{ hostvars[inventory_hostname]['ansible_ec2_local_ipv4'] }}"
-   when: provider == 'aws'
+    private_ipv4: "{{ hostvars[inventory_hostname]['ansible_ec2_local_ipv4'] }}"
+    when: provider == 'aws'
+  tags:
+    - consul
+    - security_rotation
 
 - name: add consul user to tls group
   sudo: yes
