--- a/playbooks/c12e_customize.yml
+++ b/playbooks/c12e_customize.yml
@@ -3,9 +3,8 @@
 - hosts: all
   sudo: yes
   vars: 
-    mantl_config_dir: ~/projects/mantl-config
-    wildcard_certs_dir: "{{mantl_config_dir}}/c1.io.certs"
-    # a directory where you keep configuration of mantl projects
+    mantl_config_dir: ~/projects/mantl-config/aws/ihc/BaseStack
+    wildcard_certs_dir: "{{mantl_config_dir}}/ihc.c1.io.certs"
     use_wildcard_certs: "yes"
     wildcard_keys: 
       - wildcard.c1.io.key.pem
@@ -21,18 +20,33 @@
         - nano
         - telnet
 
+    - name: remove bad kernel.hostname entry in /etc/sysctl.conf 
+      lineinfile: 
+        dest: /etc/sysctl.conf
+        line: "kernel.hostname = ip-172-31-51-114"
+        state: absent
+
     - name: template rules.toml file
       template:
         src: "{{ traefik_rules_toml_path }}"
         dest: "/etc/traefik/rules.toml"
       when: inventory_hostname in groups['role=edge']
     
+    - name: remove accident
+      file:
+        dest: /cs/beanstalk/prod-ihc/ihc-admin
+        state: absent
+      tags:
+        - private_config
+
     - name: make the destination directories
       file:
         state: directory
         dest: /cs/beanstalk/prod-ihc/{{ (item | basename).replace('_private-config.json','') }}
       with_fileglob: 
        - "{{ mantl_config_dir }}/private_configs/*"
+      tags:
+        - private_config
 
     - name: copy private-config.json files to workers
       copy:
@@ -40,6 +54,8 @@
         dest: /cs/beanstalk/prod-ihc/{{ (item | basename).replace('_private-config.json','') }}/private-config.json
       with_fileglob: 
        - "{{ mantl_config_dir }}/private_configs/*"
+      tags:
+        - private_config
 
     - include: wildcard_ssl.yml
       when: (use_wildcard_certs == 'yes')
