--- a/playbooks/c12e_customize.yml
+++ b/playbooks/c12e_customize.yml
@@ -3,8 +3,9 @@
 - hosts: all
   sudo: yes
   vars: 
-    mantl_config_dir: ~/projects/mantl-config/aws/ihc/BaseStack
-    wildcard_certs_dir: "{{mantl_config_dir}}/ihc.c1.io.certs"
+    mantl_config_dir: ~/projects/mantl-config/aws/ihc/CognitiveProdStack
+    certs_root: ~/projects/mantl-config
+    wildcard_certs_dir: "{{ certs_root }}/ihc.c1.io.certs"
     use_wildcard_certs: "yes"
     wildcard_keys: 
       - wildcard.c1.io.key.pem
@@ -20,6 +21,28 @@
         - nano
         - telnet
 
+    - name: stop un-needed services
+      sudo: yes
+      service:
+        name: "{{item}}"
+        enabled: no
+        state: stopped
+      with_items:
+        - etcd
+        - skydns
+        - kubelet
+
+    - name: disable un-needed services
+      sudo: yes
+      service:
+        name: "{{item}}"
+        enabled: no
+        state: disabled
+      with_items:
+        - etcd
+        - skydns
+        - kubelet
+
     - name: remove bad kernel.hostname entry in /etc/sysctl.conf 
       lineinfile: 
         dest: /etc/sysctl.conf
@@ -31,13 +54,6 @@
         src: "{{ traefik_rules_toml_path }}"
         dest: "/etc/traefik/rules.toml"
       when: inventory_hostname in groups['role=edge']
-    
-    - name: remove accident
-      file:
-        dest: /cs/beanstalk/prod-ihc/ihc-admin
-        state: absent
-      tags:
-        - private_config
 
     - name: make the destination directories
       file:
@@ -47,6 +63,7 @@
        - "{{ mantl_config_dir }}/private_configs/*"
       tags:
         - private_config
+      when: inventory_hostname in groups['role=worker']
 
     - name: copy private-config.json files to workers
       copy:
@@ -56,6 +73,7 @@
        - "{{ mantl_config_dir }}/private_configs/*"
       tags:
         - private_config
+      when: inventory_hostname in groups['role=worker']
 
     - include: wildcard_ssl.yml
       when: (use_wildcard_certs == 'yes')
@@ -99,4 +117,7 @@
         mode: 0600
         content: fluffyPizza
       when: inventory_hostname in groups['role=worker']
+
+    # - include: wildcard_ssl.yml
+    #   when: (use_wildcard_certs == 'yes')
 
