--- a/roles/common/tasks/users.yml
+++ b/roles/common/tasks/users.yml
@@ -24,7 +24,7 @@
   authorized_key: "user={{ item.0.name }} key='{{ item.1 }}'"
   when: item.1 is defined and item.0.enabled == 1
   with_subelements:
-    - users|default([])
+    - "{{ users | default([]) }}"
     - pubkeys
   tags:
     - users
