--- a/roles/dnsmasq/tasks/main.yml
+++ b/roles/dnsmasq/tasks/main.yml
@@ -1,15 +1,15 @@
 ---
 - name: download custom mantl-dns rpm
   get_url:
-    url: http://ds-site-static-assets.s3.amazonaws.com/systems/mantl-dns-1.1.0-custombuild-ds.centos.x86_64.rpm  
-    dest: /tmp/mantl-dns-1.1.0-custombuild-ds.centos.x86_64.rpm
+    url: http://ds-site-static-assets.s3.amazonaws.com/systems/mantl-dns-1.1.0-6.centos.x86_64.rpm  
+    dest: /tmp/mantl-dns-1.1.0-6.centos.x86_64.rpm
   tags:
     - dnsmasq
 
 - name: install mantl-dns
   become: yes
   yum:
-    name: /tmp/mantl-dns-1.1.0-custombuild-ds.centos.x86_64.rpm
+    name: /tmp/mantl-dns-1.1.0-6.centos.x86_64.rpm
     state: installed
   tags:
     - dnsmasq
