--- a/roles/distributive/tasks/main.yml
+++ b/roles/distributive/tasks/main.yml
@@ -26,6 +26,7 @@
     - "distributive-{{ current_role }}-{{ checklist_versions[current_role] }}"
 
 - name: do fast fix for python2-pip package name change
+  become: yes
   shell: "sed -i -e 's/python-pip/python2-pip/g' /etc/distributive.d/distributive-common.json"
 
 - name: create consul configuration directory
